--- a/add_stats_to_network.ipynb
+++ b/add_stats_to_network.ipynb
@@ -44,26 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DiGraph' object has no attribute '_succ'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-a69cd25b5dff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# remove self loops, if node is pointing to self\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mG\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove_edges_from\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselfloop_edges\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/home/svujovic/anaconda3/lib/python3.6/site-packages/networkx/classes/graph.py\u001b[0m in \u001b[0;36mselfloop_edges\u001b[0;34m(self, data, keys, default)\u001b[0m\n\u001b[1;32m    755\u001b[0m         \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"selfloop_edges is deprecated. Use nx.selfloop_edges instead.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    756\u001b[0m         \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDeprecationWarning\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 757\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselfloop_edges\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    758\u001b[0m     \u001b[0;31m# Done with backward compatibility methods for 1.x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    759\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/svujovic/anaconda3/lib/python3.6/site-packages/networkx/classes/function.py\u001b[0m in \u001b[0;36mselfloop_edges\u001b[0;34m(G, data, keys, default)\u001b[0m\n\u001b[1;32m   1150\u001b[0m                         if n in nbrs for d in nbrs[n].values())\n\u001b[1;32m   1151\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1152\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnbrs\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mG\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnbrs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1153\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1154\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/svujovic/anaconda3/lib/python3.6/site-packages/networkx/classes/digraph.py\u001b[0m in \u001b[0;36madj\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    332\u001b[0m         \u001b[0mFor\u001b[0m \u001b[0mdirected\u001b[0m \u001b[0mgraphs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0mG\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madj\u001b[0m\u001b[0;31m`\u001b[0m \u001b[0mholds\u001b[0m \u001b[0moutgoing\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msuccessor\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0minfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    333\u001b[0m         \"\"\"\n\u001b[0;32m--> 334\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mAdjacencyView\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_succ\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    335\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    336\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DiGraph' object has no attribute '_succ'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# remove self loops, if node is pointing to self\n",
     "G.remove_edges_from(G.selfloop_edges())"
@@ -71,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -82,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -96,18 +81,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'birthDate': None,\n",
+       " 'deathDate': datetime.datetime(1997, 12, 22, 0, 0),\n",
+       " 'eig_central': 2.6561894702452105e-24,\n",
+       " 'gender': 'male',\n",
+       " 'in_degree': 1,\n",
+       " 'k_core': 3,\n",
+       " 'name': [' sebastian arcos bergnes ', ' arcos bergnes sebastian '],\n",
+       " 'nationality': ['cuban'],\n",
+       " 'occupation': ['dentist', 'politician'],\n",
+       " 'out_degree': 3,\n",
+       " 'party': []}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "G.node[1000016]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -118,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -150,15 +156,18 @@
     {
      "data": {
       "text/plain": [
-       "['2003_12_dir_dir',\n",
-       " '2006_12_dir_dir',\n",
-       " '2008_12_dir_dir',\n",
-       " '2011_12_dir_dir',\n",
-       " '2013_12_dir_dir',\n",
-       " '2016_12_dir_dir']"
+       "['2003_12_dir',\n",
+       " '2006_12_dir',\n",
+       " '2008_12_dir',\n",
+       " '2011_12_dir',\n",
+       " '2013_06_dir',\n",
+       " '2013_12_dir',\n",
+       " '2015_12_dir',\n",
+       " '2016_06_dir',\n",
+       " '2016_12_dir']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -180,18 +189,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph 2003_12_dir_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs_sats//2003_12_dir_dir\n",
-      "Graph 2006_12_dir_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs_sats//2006_12_dir_dir\n",
-      "Graph 2008_12_dir_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs_sats//2008_12_dir_dir\n",
-      "Graph 2011_12_dir_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs_sats//2011_12_dir_dir\n",
-      "Graph 2013_12_dir_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs_sats//2013_12_dir_dir\n",
-      "Graph 2016_12_dir_dir stats computed.\n",
-      "Network saved as pickle on PATH:  data/graphs_sats//2016_12_dir_dir\n"
+      "Graph 2003_12_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2003_12_dir\n",
+      "Graph 2006_12_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2006_12_dir\n",
+      "Graph 2008_12_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2008_12_dir\n",
+      "Graph 2011_12_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2011_12_dir\n",
+      "Graph 2013_06_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2013_06_dir\n",
+      "Graph 2013_12_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2013_12_dir\n",
+      "Graph 2015_12_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2015_12_dir\n",
+      "Graph 2016_06_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2016_06_dir\n",
+      "Graph 2016_12_dir stats computed.\n",
+      "Network saved as pickle on PATH:  data/graphs_sats//2016_12_dir\n"
      ]
     }
    ],
@@ -209,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -220,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -242,7 +257,7 @@
        "1000016"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +276,7 @@
     {
      "data": {
       "text/plain": [
-       "{'eig_central': 0.06727555605745737,\n",
+       "{'eig_central': 0.06727555605745743,\n",
        " 'gender': 'male',\n",
        " 'in_degree': 470,\n",
        " 'k_core': 36,\n",
@@ -272,7 +287,7 @@
        " 'party': [' nazi party ']}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
