--- a/add_efficiency.ipynb
+++ b/add_efficiency.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -166,27 +166,27 @@
     {
      "data": {
       "text/plain": [
-       "{'birthDate': datetime.datetime(1884, 5, 8, 0, 0),\n",
-       " 'deathDate': datetime.datetime(1972, 12, 26, 0, 0),\n",
-       " 'efficiency': 0.95722242512799993,\n",
-       " 'eig_central': 0.14365042814911705,\n",
+       "{'birthDate': datetime.datetime(1957, 10, 25, 0, 0),\n",
+       " 'deathDate': None,\n",
+       " 'efficiency': 0.33333333333299997,\n",
+       " 'eig_central': 2.353981517939351e-19,\n",
        " 'gender': 'male',\n",
-       " 'in_degree': 120,\n",
-       " 'k_core': 33,\n",
-       " 'name': [' harry s truman '],\n",
-       " 'nationality': ['american'],\n",
-       " 'occupation': ['writer', 'politician'],\n",
-       " 'out_degree': 28,\n",
-       " 'party': [' democratic party (united states) ']}"
+       " 'in_degree': 1,\n",
+       " 'k_core': 3,\n",
+       " 'name': [' atsushi onita ', ' mr onita ', ' the great nita '],\n",
+       " 'nationality': ['japanese'],\n",
+       " 'occupation': ['actor', 'politician', 'sportsperson'],\n",
+       " 'out_degree': 2,\n",
+       " 'party': []}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "G.node[G.nodes()[66]]"
+    "G.node[G.nodes()[1500]]"
    ]
   },
   {
