changes in netwok size, when reading files and dataset augmented

--- a/network_size.ipynb
+++ b/network_size.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -12,18 +12,64 @@
     "import pandas as pd \n",
     "import networkx as nx \n",
     "import stats\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from os import listdir\n",
+    "from os.path import isfile, join"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2001_06',\n",
+       " '2001_12',\n",
+       " '2002_06',\n",
+       " '2002_12',\n",
+       " '2003_06',\n",
+       " '2003_12',\n",
+       " '2004_06',\n",
+       " '2004_12',\n",
+       " '2005_06',\n",
+       " '2005_12',\n",
+       " '2006_06',\n",
+       " '2006_12',\n",
+       " '2007_06',\n",
+       " '2007_12',\n",
+       " '2008_06',\n",
+       " '2008_12',\n",
+       " '2009_06',\n",
+       " '2009_12',\n",
+       " '2010_06',\n",
+       " '2010_12',\n",
+       " '2011_06',\n",
+       " '2011_12',\n",
+       " '2012_06',\n",
+       " '2012_12',\n",
+       " '2013_06',\n",
+       " '2013_12',\n",
+       " '2014_06',\n",
+       " '2014_12',\n",
+       " '2015_06',\n",
+       " '2015_12',\n",
+       " '2016_06',\n",
+       " '2016_12']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "files = stats.get_files(\"data/graphs\")[:-1]"
+    "files = stats.get_files(\"data/graphs\")[:-1]\n",
+    "files = [file for file in files if file.endswith(\"_06\") or file.endswith(\"_12\")]\n",
+    "files"
    ]
   },
   {
@@ -93,22 +139,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def save_network_size(path_files, path_save):\n",
+    "def save_network_size(files, path_save):\n",
     "    \"\"\" Returns a dataframe with two columns, one with the number of female nodes\n",
     "        and one with the number of male nodes. \n",
     "        Input parameters: \n",
-    "        1. path_files - path to pickled network files\n",
+    "        1. files - pickled network files\n",
     "        2. path_save - directory where the dataframe with node counts should be saved\n",
     "    \"\"\"\n",
     "    lst = []\n",
     "    for file in files:\n",
     "        G = nx.read_gpickle(\"data/graphs\"+\"/\"+file)\n",
+    "#         print(\"read\")\n",
     "        mG = stats.filter_graph(G,\"gender\",\"male\")\n",
     "        fG = stats.filter_graph(G,\"gender\",\"female\")\n",
     "        sub =[file,stats.network_size(fG), stats.network_size(mG)]\n",
@@ -123,20 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def save_network_size_per(attribute, value, path_files, path_save):\n",
+    "def save_network_size_per(attribute, value, files, path_save):\n",
     "    \"\"\" Returns a dataframe with two columns, one with the number of female nodes\n",
     "        and one with the number of male nodes. However, the networks are filtered by\n",
     "        a specified attribute.\n",
     "        Input parameters:\n",
     "        1. attribute - name of the attribute\n",
     "        2. value - value of attribute to which the graph is filtered  \n",
-    "        3. path_files - path to pickled network files\n",
+    "        3. files - pickled network files\n",
     "        4. path_save - directory where the dataframe with node counts should be saved\n",
     "        \n",
     "    \"\"\"\n",
@@ -159,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -214,39 +261,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved to:  data/stats/net_size.json\n"
+     ]
+    }
+   ],
    "source": [
-    "# net_size = save_network_size(\"data/graphs/\", \"data/stats/net_size.json\")\n",
-    "net_size = pd.read_json(\"data/stats/net_size.json\")"
+    "net_size = save_network_size(files, \"data/stats/net_size.json\")\n",
+    "# net_size = pd.read_json(\"data/stats/net_size.json\")\n",
+    "# pd.read_pickle(\"data/graphs/2001_06\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved to:  data/stats/net_size_ger.json\n",
+      "Saved to:  data/stats/net_size_us.json\n",
+      "Saved to:  data/stats/net_size_ru.json\n",
+      "Saved to:  data/stats/net_size_gb.json\n",
+      "Saved to:  data/stats/net_size_fr.json\n"
+     ]
+    }
+   ],
    "source": [
-    "# net_size_de = save_network_size_per(\"nationality\", \"german\", \"data/graphs/\", \"data/stats/net_size_ger.json\")\n",
-    "# net_size_us = save_network_size_per(\"nationality\", \"american\", \"data/graphs/\", \"data/stats/net_size_us.json\")\n",
-    "# net_size_ru = save_network_size_per(\"nationality\", \"russian\", \"data/graphs/\", \"data/stats/net_size_ru.json\")\n",
-    "# net_size_gb = save_network_size_per(\"nationality\", \"british\", \"data/graphs/\", \"data/stats/net_size_gb.json\")\n",
-    "# net_size_fr = save_network_size_per(\"nationality\", \"french\", \"data/graphs/\", \"data/stats/net_size_fr.json\")\n",
-    "ns_de = pd.read_json(\"data/stats/net_size_ger.json\").sort_values(\"file\")\n",
-    "ns_us = pd.read_json(\"data/stats/net_size_us.json\").sort_values(\"file\")\n",
-    "ns_ru = pd.read_json(\"data/stats/net_size_ru.json\").sort_values(\"file\")\n",
-    "ns_gb = pd.read_json(\"data/stats/net_size_gb.json\").sort_values(\"file\")\n",
-    "ns_fr = pd.read_json(\"data/stats/net_size_fr.json\").sort_values(\"file\")"
+    "ns_de = save_network_size_per(\"nationality\", \"german\", files, \"data/stats/net_size_ger.json\")\n",
+    "ns_us = save_network_size_per(\"nationality\", \"american\", files, \"data/stats/net_size_us.json\")\n",
+    "ns_ru = save_network_size_per(\"nationality\", \"russian\", files, \"data/stats/net_size_ru.json\")\n",
+    "ns_gb = save_network_size_per(\"nationality\", \"british\", files, \"data/stats/net_size_gb.json\")\n",
+    "ns_fr = save_network_size_per(\"nationality\", \"french\", files, \"data/stats/net_size_fr.json\")\n",
+    "# ns_de = pd.read_json(\"data/stats/net_size_ger.json\").sort_values(\"file\")\n",
+    "# ns_us = pd.read_json(\"data/stats/net_size_us.json\").sort_values(\"file\")\n",
+    "# ns_ru = pd.read_json(\"data/stats/net_size_ru.json\").sort_values(\"file\")\n",
+    "# ns_gb = pd.read_json(\"data/stats/net_size_gb.json\").sort_values(\"file\")\n",
+    "# ns_fr = pd.read_json(\"data/stats/net_size_fr.json\").sort_values(\"file\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -258,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -288,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -299,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -314,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -354,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -383,20 +451,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\vujovisn\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\matplotlib\\pyplot.py:524: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
-      "  max_open_warning, RuntimeWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path = \"plots/network_size/\"\n",
     "plot_size_ratio(net_size, \"Global\",path)\n",
